--- a/main.html
+++ b/main.html
@@ -8,7 +8,46 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+    <div>
+		<label for="name">Name*</label>
+		<input type="text" id="#name" placeholder="Enter Name">
+	</div>
+	 <div>
+		<label for="email">Email*</label>
+		<input type="email" id="#email" placeholder="Enter Email">
+	</div>
+	 <div>
+		<label for="gender">gender*</label>
+		<input type="radio" >
+		 male
+		 <input type="radio">
+		 female
+	</div>
+	 <div>
+		<label for="laptop">Laptop Brands</label>
+<select id="cars">
+  <option value="volvo">Apple</option>
+  <option value="saab">Asus</option>
+  <option value="opel">HP</option>
+</select>
+	</div>
+	 <div>
+		<label for="age">Age*</label>
+		<input type="number" id="#age" placeholder=" Enter Age">
+	</div>
+	 <div>
+		<label for="dob">DOB*</label>
+		<input type="date" id="#dob" placeholder="date-of-birth">
+	</div>
+	 <div>
+		<label for="password">Password*</label>
+		<input type="password" id="#password" placeholder="Enter Password">
+	</div>
+	 <div>
+		
+		<input type="submit"  id="password" >
+	</div>
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
