--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
 	</div>
 	 <div>
 		<label for="laptop">Laptop Brands</label>
-<select id="cars">
+<select id="laptops">
   <option value="volvo">Apple</option>
   <option value="saab">Asus</option>
   <option value="opel">HP</option>
