--- a/main.html
+++ b/main.html
@@ -26,9 +26,9 @@
 	 <div>
 		<label for="laptop">Laptop Brands</label>
 <select id="laptops">
-  <option value="volvo">Apple</option>
-  <option value="saab">Asus</option>
-  <option value="opel">HP</option>
+  <option value="apple">Apple</option>
+  <option value="asus">Asus</option>
+  <option value="hp">HP</option>
 </select>
 	</div>
 	 <div>
